<resources>
    <string name="app_name">ThePlug</string>
    <string name="edit_username">Enter Username</string>
    <string name="edit_password">Enter Password</string>
    <string name="button_enter">Enter</string>
    <string name="todo">TODO</string>
    <string name="yourname">\@string/yourName</string>
    <string name="yourPic">TODO</string>
    <string name="username">Username</string>
    <string name="current_email">Current email</string>
    <string name="change_email">Change email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="rating">5</string>
    <string name="your_rating">Your Rating</string>
    <string name="change_password">Change Password</string>
    <string name="currentPass">Current password</string>
    <string name="newPass">New password</string>
    <string name="newPassVerify">Verify New password</string>
    <string name="confirm">Confirm Password</string>
    <string name="conEmail">Confirm Email</string>
    <string name="profilepic">profilePic</string>
    <string name="theme">Theme:</string>
    <string name="light">LIGHT</string>
    <string name="dark">DARK</string>
    <string name="bids">Bids</string>
    <string name="sales">Sales</string>
    <string name="purchases">Purchases</string>
    <string name="item_name">Item Name</string>
    <string name="_6">$6</string>
    <string name="hot_bid">Hot Bid</string>
    <string name="new_sales">New Sales</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="agree">By clicking SIGNUP, you agree to ThePlug\'s User Agreement, Privacy Policy, and Cookie Policy.</string>
    <string name="already_have_acctt">Already have an account?</string>
    <string name="already_have_acct">Already have an account? Go back to sign in!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="enter_linked_email">Enter the email linked to your account for a temporary password</string>
    <string name="enter_linked_email_username">Enter the email linked to your account and we will send you your username</string>
    <string name="UsersCurrentPassword">password</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="change_pic">Change Pic</string>
    <string name="item_description">Item Description</string>
    <string name="item1_Desc">Barely worn black and white old school vans.</string>
    <string name="item_Name">Old Skool Pro Skate Shoes</string>
    <string name="prodName" > Product Name </string>
    <string name="channel_01"> Item Notification </string>
    <string name="channel_Desc">Channel Description</string>
    <string name="watching"> Watch List </string>
    <string name="reason1"> Frauduelent Post</string>
    <string name="reason2"> False Contact Information </string>
    <string name="reason3"> Post of Illegal Product </string>
    <string name="reason"> What is the reason for reporting this user: (Select One) </string>
</resources>
