<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/reportReason1"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/reason1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/reportReason2"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/reason2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportReason1" />

    <Button
        android:id="@+id/reportReason3"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:layout_marginBottom="392dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/reason3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportReason2"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:gravity="left"
        android:text="@string/reason"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>