<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/thePlugToolbar"
        android:layout_width="411dp"
        android:layout_height="55dp"
        android:background="#7A7A7A"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="ThePlug"
        app:titleMarginStart="40dp" />

    <EditText
        android:id="@+id/passwordEditText8"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/agreeTextView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firstNameTextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstNameEditText4"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText4" />

<EditText
    android:id="@+id/lastNameEditText5"
    android:layout_width="329dp"
    android:layout_height="48dp"
    android:layout_marginBottom="48dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/emailEditText7"
    app:layout_constraintEnd_toEndOf="@+id/emailEditText7" />

    <TextView
        android:id="@+id/passwordTextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText8"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText8" />

<EditText
    android:id="@+id/emailEditText7"
    android:layout_width="329dp"
    android:layout_height="48dp"
    android:layout_marginBottom="48dp"
    android:autoLink="email"
    android:ems="10"
    android:inputType="textEmailAddress"
    app:layout_constraintBottom_toTopOf="@+id/passwordEditText8"
    app:layout_constraintEnd_toEndOf="@+id/passwordEditText8" />

    <TextView
        android:id="@+id/lastNameTextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastNameEditText5"
        app:layout_constraintStart_toStartOf="@+id/lastNameEditText5" />

<EditText
    android:id="@+id/firstNameEditText4"
    android:layout_width="329dp"
    android:layout_height="48dp"
    android:layout_marginTop="78dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/lastNameEditText5"
    app:layout_constraintEnd_toEndOf="@+id/lastNameEditText5"
    app:layout_constraintTop_toBottomOf="@+id/thePlugToolbar"
    app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/emailTextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText7"
        app:layout_constraintStart_toStartOf="@+id/emailEditText7" />

    <TextView
        android:id="@+id/agreeTextView6"
        android:layout_width="390dp"
        android:layout_height="43dp"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:text="@string/agree"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInTextView7"
        android:layout_width="206dp"
        android:layout_height="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/already_have_acct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
    android:id="@+id/signUpButton5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="36dp"
    android:clickable="true"
    android:onClick="sendMessage"
    android:text="SignUp"
    app:layout_constraintBottom_toTopOf="@+id/signInTextView7"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>





